# example-axum-seaquery_payment_gateway-tonic

./: .clippy.toml  .env  .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.server  Makefile  README.md  docker-compose.yaml  otel-collector.yaml  prometheus.yml
.github/workflows/: build_and_push.yml
crates/client/: Cargo.toml
crates/client/src/: di.rs  main.rs  state.rs
crates/genproto/: Cargo.toml  build.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs
crates/server/src/service/: auth.rs  mod.rs  saldo.rs  topup.rs  transfer.rs  user.rs  withdraw.rs
crates/shared/: Cargo.toml
grafana/: client-metrics.json  loki-metrics.json  node-expoter.json  server-metrics.json
logs/: rust_app_client.log.2025-07-22  rust_app_client.log.2025-08-07  rust_app_client.log.2025-08-08  rust_app_server.log.2025-07-22  rust_app_server.log.2025-07-28  rust_app_server.log.2025-08-07  rust_app_server.log.2025-08-08  rust_app_server.log.2025-08-10  rust_app_server.log.2025-08-11  rust_app_server.log.2025-08-13  rust_app_server.log.2025-08-23
migrations/: 20250719050020_create_users.up.sql  20250719050046_create_topups.down.sql  20250719050046_create_topups.up.sql  20250719050122_create_saldo.down.sql  20250719050122_create_saldo.up.sql  20250719050208_create_transfers.down.sql  20250719050208_create_transfers.up.sql  20250719050226_create_withdraws.down.sql  20250719050226_create_withdraws.up.sql
observability/: promtail-config.yaml
proto/: api.proto  auth.proto  saldo.proto  topup.proto  transfer.proto  user.proto  withdraw.proto
(+80 files in other folders)
