[package]
name = "seaquery_server_payment_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
shared.workspace = true
genproto.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bcrypt.workspace = true
chrono.workspace = true
dotenv.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
sqlx.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus-client.workspace = true
prometheus-client-derive-encode.workspace = true
opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry-otlp.workspace = true
tonic.workspace = true
tokio.workspace = true
axum.workspace = true

[features]
vendored-openssl = []

[target.'cfg(target_env = "musl")'.dependencies]
openssl.workspace = true
